# daily-headlines

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_users.py  0002_create_sources_and_feed.py  0003_create_saved_searches.py  0004_create_user_item_states.py  0005_add_source_schedule.py  0006_create_source_fetch_logs.py  0007_add_fetch_retry_fields.py  0008_create_admin_tables.py  0009_create_agent_tables.py  0010_add_api_format_to_providers.py  0011_create_user_preferences.py  0012_create_agent_tokens.py  0013_add_cron_schedule_fields.py  0016_add_data_retention_configs.py  0017_add_login_background_url.py  fe4d4e0dec9e_add_cascade_deletes_and_indexes.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: auth_utils.py  config.py  errors.py  security.py
apps/api/app/modules/admin/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/agent/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/agent_tokens/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/auth/: router.py  schemas.py  service.py
apps/api/app/plugins/: __init__.py
apps/api/app/shared/: __init__.py  responses.py
apps/api/static/: index.html
apps/api/static/assets/: index-C8VjT9Jv.js  index-Dy2bGZXJ.css
apps/api/tests/: conftest.py  test_auth.py  test_data_mgmt.py  test_health.py  test_plugins.py  test_preferences.py  test_search.py  test_sources.py
(+136 files in other folders)
